# DACNTT

./: README.md  db.sqlite3  manage.py
books/: views.py
books/migrations/: 0001_initial.py
books/templates/books/: book_detail.html  home.html  login.html  register.html
bookstore/: asgi.py  settings.py  urls.py  validators.py  wsgi.py
bookstore 1/bookstore 1/: db.sqlite3  pyproject.toml
bookstore 1/bookstore 1/books/: admin.py  models.py  views.py
bookstore 1/bookstore 1/books/management/commands/: setup_data.py
bookstore 1/bookstore 1/books/templates/books/: register.html
bookstore 1/bookstore 1/bookstore/: urls.py  validators.py
bookstore 1/bookstore 1/cart/: views.py
bookstore 1/bookstore 1/cart/migrations/: 0001_initial.py
bookstore 1/bookstore 1/cart/templates/cart/partials/: cart_content.html
bookstore 1/bookstore 1/orders/: models.py  views.py
bookstore 1/bookstore 1/orders/migrations/: 0001_initial.py
bookstore 1/bookstore 1/orders/templates/orders/: order_history.html
bookstore 1/bookstore 1/theme/templates/: base.html
bookstore 1/bookstore 1/theme/templates/partials/: toast.html
cart/: admin.py  context_processors.py  models.py  views.py
cart/migrations/: 0001_initial.py
cart/templates/cart/: cart.html  cart_item.html
orders/: admin.py  models.py  patterns.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: checkout.html  order_history.html  payment_success.html
theme/static_src/: package-lock.json  postcss.config.js
theme/static_src/src/: styles.css
theme/templates/: base.html
(+1 files in other folders)
