[project]
name = "bookstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "django-extensions>=4.1",
    "django-htmx>=1.27.0",
    "django-tailwind[cookiecutter,honcho,reload]>=4.4.1",
    "pillow>=12.0.0",
    "pyopenssl>=25.3.0",
    "werkzeug>=3.1.3",
]
